Creato con Colaboratory

--- a/Esercitazione_6.1.ipynb
+++ b/Esercitazione_6.1.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 78,
       "metadata": {
         "id": "64fRwKxUfxJY"
       },
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 79,
       "metadata": {
         "id": "R-70-09OZHoR"
       },
@@ -100,27 +100,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
-      "metadata": {
-        "id": "C6Z7nCRkfxJb"
-      },
-      "outputs": [],
       "source": [
-        "# Logistic Regression Cost Function\n",
         "def logistic_cost(W, X, Y):\n",
         "    m = len(Y)\n",
         "\n",
-        "    cost = 0.0\n",
+        "    h = sigmoid(np.dot(X, W))\n",
+        "    # Calcola la parte sinistra della sommatoria\n",
+        "    left_term = np.dot(Y.T, np.log(h))\n",
+        "    # Calcola la parte destra della sommatoria\n",
+        "    right_term = np.dot((1 - Y).T, np.log(1 - h))\n",
+        "    # Somma gli elementi di ciascuna parte\n",
+        "    cost = np.sum(left_term + right_term)\n",
+        "    # Calcola la media e applica la normalizzazione\n",
+        "    cost = (-1 / m) * cost\n",
         "\n",
-        "    for i in range(m):\n",
-        "      h = sigmoid(np.dot(X[i], W))\n",
-        "      cost += Y[i] * np.log(h) + (1 - Y[i]) * np.log(1 - h)\n",
-        "\n",
-        "    cost = (-1 / m) * cost  # Applica la normalizzazione\n",
-        "\n",
-        "    return cost\n",
-        ""
-      ]
+        "    return cost\n"
+      ],
+      "metadata": {
+        "id": "JaoeXB511t18"
+      },
+      "execution_count": 80,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -137,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 81,
       "metadata": {
         "id": "oVmk3tQgfxJc"
       },
@@ -175,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 82,
       "metadata": {
         "id": "pgEcxrMCfxJe"
       },
@@ -184,7 +184,7 @@
         "# Predict Function\n",
         "def predict(W, X):\n",
         "  y_pred = np.dot(X, W)\n",
-        "  pred = np.where(sigmoid(y_pred) > 0.5, 1, 0)\n",
+        "  pred = np.where(sigmoid(y_pred) >= 0.5, 1, 0)\n",
         "  return pred\n"
       ]
     },
@@ -200,13 +200,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 83,
       "metadata": {
         "id": "pPD0dj-cfxJf",
-        "outputId": "8db76654-f07d-4aa4-b5e6-46c6ed6f1c39",
+        "outputId": "8614214c-76f9-4ff1-af27-51ce3b3a0958",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 397
+          "height": 403
         }
       },
       "outputs": [
@@ -214,16 +214,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-01-17 09:07:25--  https://raw.githubusercontent.com/Sapienza-AI-Lab/esercitazione6-22-23/main/data/exercise1_data.txt\n",
+            "--2024-01-23 15:31:43--  https://raw.githubusercontent.com/Sapienza-AI-Lab/esercitazione6-22-23/main/data/exercise1_data.txt\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 3775 (3.7K) [text/plain]\n",
             "Saving to: ‘exercise1_data.txt’\n",
             "\n",
-            "exercise1_data.txt  100%[===================>]   3.69K  --.-KB/s    in 0s      \n",
+            "\rexercise1_data.txt    0%[                    ]       0  --.-KB/s               \rexercise1_data.txt  100%[===================>]   3.69K  --.-KB/s    in 0s      \n",
             "\n",
-            "2024-01-17 09:07:25 (41.8 MB/s) - ‘exercise1_data.txt’ saved [3775/3775]\n",
+            "2024-01-23 15:31:43 (49.6 MB/s) - ‘exercise1_data.txt’ saved [3775/3775]\n",
             "\n"
           ]
         },
@@ -240,7 +240,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-25a2913d-6db1-4fa2-9eb8-4f954cdb1417\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2c7658a8-e8d6-439e-ad95-b9f012b89fdd\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -301,7 +301,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-25a2913d-6db1-4fa2-9eb8-4f954cdb1417')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2c7658a8-e8d6-439e-ad95-b9f012b89fdd')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -353,12 +353,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-25a2913d-6db1-4fa2-9eb8-4f954cdb1417 button.colab-df-convert');\n",
+              "        document.querySelector('#df-2c7658a8-e8d6-439e-ad95-b9f012b89fdd button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-25a2913d-6db1-4fa2-9eb8-4f954cdb1417');\n",
+              "        const element = document.querySelector('#df-2c7658a8-e8d6-439e-ad95-b9f012b89fdd');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -378,8 +378,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-df1fc632-fc0a-4b95-8e11-e1e55240a263\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-df1fc632-fc0a-4b95-8e11-e1e55240a263')\"\n",
+              "<div id=\"df-863fca88-49d8-4b4a-b410-fa19679de0dd\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-863fca88-49d8-4b4a-b410-fa19679de0dd')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -498,7 +498,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-df1fc632-fc0a-4b95-8e11-e1e55240a263 button');\n",
+              "        document.querySelector('#df-863fca88-49d8-4b4a-b410-fa19679de0dd button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -509,7 +509,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 83
         }
       ],
       "source": [
@@ -522,10 +522,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 84,
       "metadata": {
         "id": "KI1RGT4wfxJf",
-        "outputId": "25838f05-9460-4e39-e5b5-ad0fc43defe5",
+        "outputId": "dabf9fa2-2e37-47f1-aa3e-5dbe474fff69",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 696
@@ -559,7 +559,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 85,
       "metadata": {
         "id": "-LeIhwsNfxJf"
       },
@@ -575,10 +575,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 86,
       "metadata": {
         "id": "gmbu9BrXfxJg",
-        "outputId": "6d4ff92c-03c2-43d8-821d-6960944385ec",
+        "outputId": "3803793c-6e6e-4e89-8bae-5e81d659c04f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 430
@@ -607,10 +607,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 87,
       "metadata": {
         "id": "Yh7Mq5CcfxJq",
-        "outputId": "72ed2915-12e7-4ffb-87d0-27fc9e48123b",
+        "outputId": "5cece073-056d-44b8-c287-86cb496e35db",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -620,7 +620,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Test cost function:  [[4.3061355]]\n"
+            "Test cost function:  4.306135502954107\n"
           ]
         }
       ],
@@ -632,10 +632,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 88,
       "metadata": {
         "id": "Hy7PD8R2fxJq",
-        "outputId": "29ec73e1-4f61-4771-827c-93bf9690c669",
+        "outputId": "4992b3b7-c7c2-447d-c137-7c4c70e43f04",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -645,7 +645,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Logistic cost after optimization:  [0.20349773]\n"
+            "Logistic cost after optimization:  0.20349773265442664\n"
           ]
         }
       ],
@@ -657,10 +657,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 89,
       "metadata": {
         "id": "9mflV-EpfxJr",
-        "outputId": "00bb3654-298c-47e3-f8ee-32680ff567d3",
+        "outputId": "30627fd8-d079-43d3-9386-a5c2c5427371",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -694,10 +694,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 90,
       "metadata": {
         "id": "he3K9BgIfxJr",
-        "outputId": "77653819-72f8-4720-d590-8a37a6e3fefe",
+        "outputId": "52d65871-393a-4ec1-92a7-1019ec3d5351",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 696
