Creato con Colaboratory

--- a/Esercitazione_6.3.ipynb
+++ b/Esercitazione_6.3.ipynb
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "pJ1nshRZfwUE"
       },
@@ -54,7 +54,7 @@
       "execution_count": 2,
       "metadata": {
         "id": "WulrJb75fwUF",
-        "outputId": "29763477-2d92-495a-b771-27c833e94268",
+        "outputId": "a5e01190-a31a-4f5f-fcc5-a1131b45e7f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -111,10 +111,10 @@
       "execution_count": 4,
       "metadata": {
         "id": "UgIArAuGfwUG",
-        "outputId": "87248a76-a246-42b1-d876-760870d1f6b0",
+        "outputId": "46720541-ed44-44ce-b3cb-fdf6a2198906",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 213
+          "height": 218
         }
       },
       "outputs": [
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 5,
       "metadata": {
         "id": "rusmF9mJfwUH"
       },
@@ -167,10 +167,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {
         "id": "JGT3ilAXfwUH",
-        "outputId": "154c6263-e698-49c7-9dec-a365e27ad8e3",
+        "outputId": "b0cb31c9-d213-4b5c-c6ac-869ddda65aee",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -192,10 +192,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 7,
       "metadata": {
         "id": "TutswEmXfwUH",
-        "outputId": "e0fe61cb-f53e-41dc-9b67-d452501c639f",
+        "outputId": "246bcc8b-99e6-43d1-adae-b2a8ca19b9bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 346
@@ -226,10 +226,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 8,
       "metadata": {
         "id": "wZfJFKynfwUH",
-        "outputId": "29f0d06a-818e-42de-de43-9fcbfc7937ab",
+        "outputId": "4ed3a8e9-c1f9-455a-a67e-8cc40288d368",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 619
@@ -279,10 +279,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 9,
       "metadata": {
         "id": "oo1vZW6tfwUI",
-        "outputId": "aa964028-9c65-49c3-a4ca-d385f60022d7",
+        "outputId": "c844c7aa-e6d1-414c-a8d5-bf7f0591147c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 402
@@ -327,7 +327,7 @@
       "execution_count": 14,
       "metadata": {
         "id": "lH1s7dPdfwUI",
-        "outputId": "6705a489-decd-41dd-e481-04aa1eb8989a",
+        "outputId": "4c8ebb19-42b0-4a71-932e-ab23a969d1dc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -359,7 +359,7 @@
         "# Plot coefficient images for each class\n",
         "fig, axes = plt.subplots(5, 2, figsize=(6, 12))\n",
         "for i, ax in enumerate(axes.flatten()):\n",
-        "    ax.imshow(coef_images[i])\n",
+        "    ax.imshow(coef_images[i], cmap = \"viridis\")\n",
         "    ax.set_title(f\"Coefficients for Class {i}\")\n",
         "    ax.axis('off')\n",
         "plt.tight_layout()\n",
@@ -371,7 +371,7 @@
       "source": [
         "Il grafico mostra le immagini dei coefficienti associati a ciascuna cifra. Ogni subplot rappresenta i pesi assegnati a ciascun pixel nell'immagine per classificare correttamente quella specifica cifra. Le zone più scure o più chiare nelle immagini rappresentano l'importanza dei pixel nella predizione della cifra corrispondente.\n",
         "\n",
-        "Ad esempio, se consideriamo il subplot \"Coefficients for Class 0\", l'immagine visualizzata rappresenta i pesi associati ai pixel per la cifra 0. I pixel più scuri in quell'immagine indicano le regioni che sono particolarmente importanti per identificare la cifra 0.\n",
+        "Ad esempio, se consideriamo il subplot \"Coefficients for Class 0\", l'immagine visualizzata rappresenta i pesi associati ai pixel per la cifra 0. I pixel più chiari in quell'immagine indicano le regioni che sono particolarmente importanti per identificare la cifra 0.\n",
         "\n",
         "In breve, questo tipo di visualizzazione fornisce una sorta di interpretazione visuale dei pesi del modello per ciascuna classe nel contesto del dataset MNIST."
       ],
