Creato con Colaboratory

--- a/Esercitazione_6.2.ipynb
+++ b/Esercitazione_6.2.ipynb
@@ -1637,19 +1637,19 @@
         ""
       ],
       "metadata": {
-        "id": "uMlxjEvl3Phl",
-        "outputId": "500ae4d8-0ba6-496a-d869-0ac7e7154319",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uMlxjEvl3Phl",
+        "outputId": "06fb6a39-e8e1-4a8a-9bc7-93695f03b835"
       },
-      "execution_count": 28,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Validation Accuracy: 0.08589539045319305\n",
+            "Validation Accuracy: 0.08593851062912336\n",
             "Validation Classification Report:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
@@ -1704,15 +1704,15 @@
             "        1976       0.07      0.01      0.02        94\n",
             "        1977       0.00      0.00      0.00       115\n",
             "        1978       0.10      0.07      0.08       146\n",
-            "        1979       0.03      0.01      0.02       139\n",
+            "        1979       0.04      0.01      0.02       139\n",
             "        1980       0.05      0.03      0.04       140\n",
             "        1981       0.00      0.00      0.00       139\n",
             "        1982       0.09      0.08      0.08       165\n",
             "        1983       0.08      0.02      0.03       157\n",
             "        1984       0.11      0.04      0.06       161\n",
-            "        1985       0.07      0.05      0.06       176\n",
+            "        1985       0.08      0.05      0.06       176\n",
             "        1986       0.06      0.03      0.04       186\n",
-            "        1987       0.06      0.03      0.04       254\n",
+            "        1987       0.05      0.02      0.03       254\n",
             "        1988       0.06      0.03      0.04       243\n",
             "        1989       0.09      0.07      0.08       267\n",
             "        1990       0.07      0.02      0.04       367\n",
@@ -1741,7 +1741,7 @@
             "   macro avg       0.06      0.12      0.04     23191\n",
             "weighted avg       0.07      0.09      0.06     23191\n",
             "\n",
-            "Test Accuracy: 0.08296321848993143\n",
+            "Test Accuracy: 0.08279073778621017\n",
             "Test Classification Report:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
@@ -1772,7 +1772,7 @@
             "        1950       0.00      0.00      0.00         4\n",
             "        1951       0.00      0.00      0.00         5\n",
             "        1952       0.00      0.00      0.00         3\n",
-            "        1953       0.08      0.17      0.11         6\n",
+            "        1953       0.07      0.17      0.10         6\n",
             "        1954       0.00      0.00      0.00         7\n",
             "        1955       0.00      0.00      0.00        10\n",
             "        1956       0.05      0.04      0.04        25\n",
@@ -1783,7 +1783,7 @@
             "        1961       0.00      0.00      0.00        24\n",
             "        1962       0.00      0.00      0.00        25\n",
             "        1963       0.00      0.00      0.00        33\n",
-            "        1964       0.09      0.05      0.06        41\n",
+            "        1964       0.10      0.05      0.06        41\n",
             "        1965       0.00      0.00      0.00        48\n",
             "        1966       0.00      0.00      0.00        68\n",
             "        1967       0.07      0.04      0.05        80\n",
@@ -1807,15 +1807,15 @@
             "        1985       0.09      0.07      0.08       168\n",
             "        1986       0.05      0.02      0.03       201\n",
             "        1987       0.06      0.02      0.03       253\n",
-            "        1988       0.07      0.04      0.05       252\n",
-            "        1989       0.08      0.05      0.06       292\n",
+            "        1988       0.06      0.03      0.04       252\n",
+            "        1989       0.07      0.05      0.06       292\n",
             "        1990       0.03      0.02      0.02       288\n",
             "        1991       0.06      0.09      0.07       391\n",
             "        1992       0.05      0.04      0.05       427\n",
             "        1993       0.04      0.03      0.04       473\n",
             "        1994       0.04      0.06      0.05       555\n",
             "        1995       0.04      0.03      0.03       573\n",
-            "        1996       0.08      0.03      0.05       666\n",
+            "        1996       0.07      0.03      0.05       666\n",
             "        1997       0.04      0.02      0.03       660\n",
             "        1998       0.05      0.02      0.03       725\n",
             "        1999       0.08      0.02      0.04       853\n",
@@ -1825,7 +1825,7 @@
             "        2003       0.05      0.01      0.01      1193\n",
             "        2004       0.07      0.03      0.04      1356\n",
             "        2005       0.06      0.15      0.09      1609\n",
-            "        2006       0.09      0.17      0.11      1655\n",
+            "        2006       0.09      0.16      0.11      1655\n",
             "        2007       0.10      0.37      0.16      1808\n",
             "        2008       0.12      0.17      0.14      1529\n",
             "        2009       0.14      0.06      0.09      1436\n",
@@ -1835,6 +1835,45 @@
             "   macro avg       0.06      0.15      0.03     23191\n",
             "weighted avg       0.07      0.08      0.06     23191\n",
             "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import mean_squared_error\n",
+        "\n",
+        "val_predictions = model.predict(X_val)\n",
+        "\n",
+        "# Valuta le prestazioni del modello sul set di validazione usando MSE\n",
+        "val_mse = mean_squared_error(y_val, val_predictions)\n",
+        "\n",
+        "# Fai previsioni sul set di test\n",
+        "test_predictions = model.predict(X_test)\n",
+        "\n",
+        "# Valuta le prestazioni del modello sul set di test usando MSE\n",
+        "test_mse = mean_squared_error(y_test, test_predictions)\n",
+        "\n",
+        "# Stampa i risultati\n",
+        "print(f'Validation Mean Squared Error: {val_mse}')\n",
+        "print(f'Test Mean Squared Error: {test_mse}')"
+      ],
+      "metadata": {
+        "id": "_S6a_XLTyzbV",
+        "outputId": "e4b3ddfc-6b74-4267-942d-f852dd5b9782",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Validation Mean Squared Error: 148.42956319261782\n",
+            "Test Mean Squared Error: 145.96179552412573\n"
           ]
         }
       ]
